tests/integration/errors/007_content_between_closing_and_block_end.nesl
<<<<<<<<<nesl
{
  key = R"""pv(value)pv"""
}
some content here
=========nesl